# gamma-config

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .prettierrc  404.html  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  build-requirements.in  build-requirements.txt  config  dev-requirements.in  dev-requirements.txt  gen_api.py  index.html  mkdocs.yml  objects.inv  publish  publish.sh  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.publish.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
.github/workflows/: build-deploy.yaml  pythonpackage.yml
api/SUMMARY/: index.html
api/gamma/config/: index.html
api/gamma/config/__version__/: index.html
api/gamma/config/builtin_tags/: index.html
api/gamma/config/cache/: index.html
api/gamma/config/confignode/: index.html
api/gamma/config/dump_dict/: index.html
api/gamma/config/dump_yaml/: index.html
api/gamma/config/findconfig/: index.html
api/gamma/config/globalconfig/: index.html
api/gamma/config/load/: index.html
api/gamma/config/merge/: index.html
api/gamma/config/pydantic/: index.html
api/gamma/config/rawnodes/: index.html
api/gamma/config/render/: index.html
api/gamma/config/render_cli/: index.html
api/gamma/config/render_context/: index.html
api/gamma/config/scaffold/: index.html
api/gamma/config/tags/: index.html
api/gamma/dispatch/: index.html
api/gamma/dispatch/dispatchsystem/: index.html
api/gamma/dispatch/parametric_types/: index.html
api/gamma/dispatch/poset/: index.html
api/gamma/dispatch/typesystem/: index.html
built-in-tags/: index.html
config/: 00-meta.yaml  10-sample.yaml
config/dev/: 70-sample.yaml
config/prod/: 70-sample.yaml
custom-tags/: index.html
docs/: Makefile  README.md  _sidebar.md  api.md  built-in-tags.md  conf.py  custom-tags.md  environmens.md  environment.md  gen_api.py  index.html  index.rst  internals.md  multi-dispatch.md  structured.md  tags.md  using.md  writing-config.md
docs/latest/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/latest/_sources/: index.rst.txt
docs/latest/_sources/pages/: getting-started.rst.txt  loading-merging.rst.txt  meta-config.rst.txt  tags.rst.txt  (+1 more)
docs/latest/pages/: getting-started.html  loading-merging.html  meta-config.html  plugins.html  tags.html  using-your-app.html
docs/pages/: getting-started.rst  meta-config.rst  plugins.rst  tags.rst  using-your-app.rst
environment/: index.html
gamma/config/: __init__.py  __main__.py  __version__.py  builtin_tags.py  cache.py  cli.py  cli_command.py  cli_plugin.py  config.py  confignode.py  dict_merge.py  dump_dict.py  dump_yaml.py  findconfig.py  globalconfig.py  load.py  locate.py  merge.py  plugins.py  rawnodes.py  render.py  render_cli.py  render_context.py  scaffold.py  subprocess.py  tags.py  yaml_merge.py
gamma/config/pydantic/: __init__.py
gamma/config/sample/: 00-meta.yaml  10-sample.yaml  11-sample-override.yaml
gamma/dispatch/: __init__.py  core.py  dispatchsystem.py  parametric.py  parametric_types.py  poset.py  typesystem.py
multi-dispatch/: index.html
scripts/: update-coverage.py
structured/: index.html
test/: __init__.py
test/gamma/config/: .gitignore  config.env  conftest.py  custom_plugin.py  custom_tag.py  test_cli.py  test_cli_command.py  test_cli_plugin.py  test_confignode.py  test_custom_tag.py  test_dict_merge.py  test_dump_raw.py  test_findconfig.py  test_merge.py  test_nodes.py  test_plugins.py  test_raw_nodes.py  test_render.py  test_render_context.py  test_sample.py  test_scaffold.py  test_serializable.py  test_subprocess.py  test_tags.py  test_to_dict.py
test/gamma/dispatch/: test_dispatch.py  test_parametric.py  test_performance.py  test_poset.py  test_type_system.py  test_typesystem.py
tests/gamma/config/: config.local.env  conftest.py  custom_tag.py  test_call.py  test_confignode.py  test_custom_tag.py  test_dict_merge.py  test_findconfig.py  test_merge.py  test_nodes.py  test_raw_nodes.py  test_render.py  test_render_context.py  test_sample.py  test_scaffold.py  test_serializable.py  test_tags.py  test_to_any.py  test_yaml_anchors.py
tests/gamma/dispatch/: test_dispatch.py  test_parametric.py  test_performance.py  test_poset.py  test_special.py  test_typesystem.py
using/: index.html
writing-config/: index.html
(+9 files in other folders)
