[bumpversion]
current_version = 0.4.15
commit = True
tag = True

[metadata]
name = gamma-config
version = attr: gamma.config.__version__
description = Opinionated config handling for BCG Gamma projects
long_description = file: README.md
license = Proprietary
author = Cloves Almeida
author-email = almeida.cloves@bcg.com
url = https://github.gamma.bcg.com/BCG/gamma-config
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7

[options]
packages = find_namespace:
install_requires = 
	colorama >=0.4
	python-dateutil >=2,<3
	python-dotenv >=0.13
	ruamel.yaml >=0.16

[options.packages.find]
include = gamma*

[options.package_data]
gamma.config.sample = *,**/*

[bumpversion:file:gamma/config/__init__.py]

[flake8]
exclude = docs,.git,tmp,.venv,_tmp,build,dist
max-line-length = 88
extend-ignore = F811

[tool:pytest]
addopts = --cov=gamma --cov-report term --cov-report xml:cov.xml
testpaths = test
